# p2p-file-distribution

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  todos.md
common/: Cargo.toml  build.rs
common/src/: lib.rs  types.rs
coordinator/: Cargo.toml
coordinator/src/: admin_ui.rs  api.rs  db.rs  health_checker.rs  main.rs
coordinator/static/: admin.html
docs/: chain-architecture.md  mesh-architecture.md
mesh/common/: Cargo.toml  build.rs
mesh/common/src/: lib.rs  types.rs
mesh/coordinator/: Cargo.toml
mesh/coordinator/src/: admin_ui.rs  api.rs  db.rs  grpc_service.rs  main.rs  scheduler.rs  state.rs
mesh/coordinator/static/: admin.html
mesh/proto/: mesh.proto
mesh/scripts/: gcp-deploy.sh  gcp-instance-specs.env
mesh/server/: Cargo.toml
mesh/server/src/: downloader.rs  main.rs  scheduler_client.rs  shard_service.rs  storage.rs
migrations/: 001_initial.sql
pipeline/: Cargo.toml  Cross.toml
pipeline/common/: build.rs
pipeline/common/src/: lib.rs  types.rs
pipeline/coordinator/: Cargo.toml
pipeline/coordinator/src/: api.rs  db.rs  health_checker.rs  main.rs
pipeline/coordinator/static/: admin.html
pipeline/proto/: pipeline.proto
pipeline/scripts/: gcp-deploy.sh  gcp-instance-specs.env  purge-state.sh  start-local.sh  stop-local.sh
pipeline/server/: Cargo.toml
pipeline/server/src/: coordinator_client.rs  downloader.rs  file_service.rs  main.rs  storage.rs
pipeline/worker/: Cargo.toml
pipeline/worker/src/: chunk_cache.rs  constants.rs  coordinator_client.rs  downloader.rs  file_service.rs  main.rs  storage.rs  tcp_server.rs
proto/: chunk_transfer.proto
scripts/: gcp-deploy.sh  generate-test-data.sh  purge-state.sh  setup_test_data.py  start-local.sh  stop-local.sh  upload-test-data.sh
server/: Cargo.toml
server/src/: coordinator_client.rs  downloader.rs  file_service.rs  main.rs  storage.rs
