[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "transport", "channel"] }
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
