[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
urlencoding = "2.1"
object_store = { version = "0.11", features = ["gcp"] }
dotenvy = "0.15"
tonic = "0.12"
prost = "0.13"
sha2 = "0.10"
crc32c = "0.6"
hex = "0.4"
futures = "0.3"
