[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
object_store = { version = "0.11", features = ["gcp"] }
urlencoding = "2"
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
crc32c = "0.6"
dotenvy = "0.15"
base64 = "0.22"
